# lib-service

./: .env  .env_dist  .gitignore  1.client.go  2.server.py  3.server.go  README.md  dataset.csv  docker-compose.yaml  go.mod  go.sum  main.go  package-lock.json  package.json  requirements.txt  tracer.py
.github/workflows/: codeql.yml
account/: .env  go.sum
account/config/: config.yaml
account/entities/: user.go
api-gateway/nginx/: go_proxy.conf
cmd/: README.MD
cmd/account/: .env  go.mod  usertable.sql
cmd/catalog/: .env_dist  Dockerfile  README.md  book.go  catalog.go  go.mod  go.sum  httpFuncks.go  httpFuncs.go  jwt.go  main.go
cmd/queue-loan/: Cargo.toml
cmd/statistics/: go.mod
microservises/catalog/: book.go  catalog.go  jwt.go
public/: index.html
queue-loan/: .gitignore  Cargo.toml  Dockerfile  sqlx-data.json
queue-loan/src/: access.rs  error.rs  main.rs  models.rs  routes.rs  state.rs  status.rs
src/: App.js  dashboard.js  header.js  index.js  regPage.js
src/adminpanel/: adminpage.jsx
src/components/: BookSheet.jsx  Container.jsx  Modal.jsx
src/http/: catalog.js
src/styles/: App.css  bookSheet.css  dashboard.css  head.css  searchTab.module.css
stat_n_rec/entities/: json_typo.go
stat_n_rec/handlers/: 2.server.py  Dockerfile_client  Dockerfile_server  client.go  neural.py  server.go  server.py  statistics.go  tracer.py
tracer/handler/: config.py  db.py  server.py
web/: package-lock.json  package.json
web/public/: index.html
web/src/: bookpage.js  dashboard.js  header.js  index.js  loginPage.js  serchTab.js
(+49 files in other folders)
