[package]
name = "queue-loan"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.11", features = ["macros"] }
chrono = "0.4.24"
dotenvy = "0.15.6"
eyre = "0.6.8"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.157", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
