[package]
name = "queue-loan"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.11", features = ["macros"] }
axum-extra = { version = "0.7.2", features = ["cookie"] }
base64 = "0.21.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.6"
eyre = "0.6.8"
jsonwebtoken = "8.3.0"
serde = { version = "1.0.157", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-native-tls", "chrono", "offline"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
